层次结构选择器

--- a/html/CH04/ch04.md
+++ b/html/CH04/ch04.md
@@ -127,3 +127,40 @@
 		
 	}
   ```
+ 
+## 层次结构选择器
+  网页中的标签就像是一颗树，层次结构选择器就是在这颗树上，按照一定的规则匹配子级元素。
+  
+  |选择器|类型|描述|
+  |:-:|:-:|:-:|
+  |E F|后代选择器|匹配E之内的所有的F节点|
+  |E>F|子选择器|匹配E的所有子级F节点|
+  |E+F|相邻兄弟选择器|匹配和E同级别的下一个F|
+  |E~F|通用兄弟选择器|匹配和E同级别的之后所有的F|
+  
+### 后代选择器
+
+  ```css
+    /*E和F都是选择器，E是一个父级几点，F是E中的子节点。E F匹配的是E中的所有的F子节点。*/
+	E F{
+		
+	}
+  ```
+  
+### 子选择器
+
+  ```css
+    /*匹配E中所有的子级F节点*/
+    E > F{
+		
+	}
+  ```
+  
+### 通用兄弟选择器
+
+  ```css
+   /*匹配和E同级别并且E之后的所有的F*/
+   E ~ F{
+	   
+   }
+  ```
