结构伪类选择器和属性选择器

--- a/html/CH04/ch04.md
+++ b/html/CH04/ch04.md
@@ -155,7 +155,13 @@
 		
 	}
   ```
-  
+### 相邻兄弟选择器
+  ```css
+    /*和E同级别的下一个F*/
+	E + F{
+		
+	}
+  ```
 ### 通用兄弟选择器
 
   ```css
@@ -164,3 +170,83 @@
 	   
    }
   ```
+  
+### 分组选择器
+
+  ```css
+  /*不同的选择器公用的样式*/
+  E,F,T{
+	  
+  }
+  
+  /*匹配E选择器代表的标签，并且该标签使用F的类选择器*/
+  E.F{
+	  
+  }
+  ```
+  
+## 结构伪类选择器
+
+  现目前已经学习的标签选择器和类选择器能够对大范围的标签设置样式。结构伪类选择器能够根据序号精确匹配到具体的标签。
+  
+  结构伪类选择器都是从父级元素中找子元素。
+  ```
+	first:第一
+	child:孩子
+	last:最后的
+	nth:第n个
+  ```
+  
+  |选择器|描述|
+  |:-:|:-:|
+  |E:first-child|匹配E的父级元素中的第一个子元素，并且该子元素必须是E|
+  |E:last-child|匹配E的父级元素中最后一个子元素，并且该元素必须是E|
+  |E:nth-child(n)|匹配E的父级中第n个子元素，并且该元素必须是E，n从1开始|
+  |E:first-of-type|匹配E的父级按类型匹配第一个子元素|
+  |E:last-of-type|匹配E的父级中按类型的最后一个E子元素|
+  |E:nth-of-type(n)|匹配E的父级元素中第n个E类型的子元素|
+  
+## 属性选择器
+
+  属性选择器大多数情况下使用在表单元素中。
+  
+  ```html
+	<!--
+		name和value就称为input标签的属性
+	-->
+	<input type="text" name="account" value="admin" />
+  ```
+  
+  attr是attribute单词的缩写，attribute含义为属性的意思。
+  
+  |选择器|描述|
+  |:-:|:-:|
+  |E[attr]|匹配E中包含attr属性的标签|
+  |E[attr=value]|匹配E中属性为value的标签|
+  
+  
+  
+## E[attr]
+
+  - input[name]
+   匹配包含name属性的input标签
+   
+## E[attr="value"]
+
+  - input[type="text"],input[type="password"]
+   匹配所有的文本框以及密码框
+   
+## E[attr^="value"]
+
+  - input[name^="gen"]
+   匹配input标签name属性已gen开头，比如能够匹配name="gender"的input
+   
+## E[attr$="value"]
+
+  - input[name$="der"]
+   匹配input标签name属性值已der结尾的标签。比如能够匹配name="gender"的input
+   
+## E[attr*="value"]
+
+  - input[name*="bc"]
+   匹配input标签name属性的值中包含a的标签。比如能够匹配name="abca"的input
