网易邮箱练习题

--- a/html/CH04/ch04.md
+++ b/html/CH04/ch04.md
@@ -195,6 +195,7 @@
 	child:孩子
 	last:最后的
 	nth:第n个
+	type:类型
   ```
   
   |选择器|描述|
@@ -223,6 +224,9 @@
   |:-:|:-:|
   |E[attr]|匹配E中包含attr属性的标签|
   |E[attr=value]|匹配E中属性为value的标签|
+  |E[attr^=value]|匹配attr属性已value值开头|
+  |E[attr$=value]|匹配attr属性值已value结尾|
+  |E[attr*=value]|匹配attr属性值包含value|
   
   
   
